--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul>
-        <li><a href="hello-world/stream-one.html">Stream One</a></li>
-        <li><a href="hello-world/stream-two.html">Stream Two</a></li>
-        <li><a href="hello-world/stream-three.html">Stream Three</a></li>
+        <li><a href="index.html">Stream One</a></li>
+        <li><a href="stream-two.html">Stream Two</a></li>
+        <li><a href="stream-three.html">Stream Three</a></li>
         </ul>
     </nav>
     <h1>Stream One</h1>
